Deleted the grid area nicknames, because I have done it wrong I think.  Added padding to the top and bottom of the carousel-section, changed from carousel to carousel-section in the _main.css .wrapper, added three separete sections for carousels, mobile, tablet, desktop.

--- a/css/sections/_carousel.css
+++ b/css/sections/_carousel.css
@@ -1,7 +1,10 @@
 .bg-gradient { background: linear-gradient(var(--linear-gradient-c-sec)); }
 /* .bg-gradient { background: var(--color-gray-100) } */
-
-.c-wrapper {
+#carousel-section {
+    padding-top: 2rem;
+    padding-bottom: 5rem;
+}
+.c-wrap {
     display: grid;
     justify-content: center;
     text-align: center;
@@ -19,7 +22,34 @@
         }
     }
 
+    .mobile-carousel {
+        
+        @media (min-width: 768px) {
+            display: none;
+        }
 
+        .carousel-wrapper
+    }
+
+    .tablet-carousel {
+        display: none;
+
+        @media (min-width: 768px) {
+            display: block;
+
+            @media (min-width: 1400px) {
+                display: none;
+            }
+        }
+    }
+
+    .desktop-carousel {
+        display: none;
+
+        @media (min-width: 1400px) {
+            display: block;
+        }
+    }
 
     .c-text {
         h3 {
@@ -33,3 +63,4 @@
         }
     }
 }
+
