--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
     "showcase-section"
     "brands-section"
     "app-features-section"
-    "carousel"
+    "carousel-section"
     "footer-section";
 }
 
