--- a/css/sections/_carousel.css
+++ b/css/sections/_carousel.css
@@ -4,6 +4,10 @@
     /* padding-top: 1rem; */
     padding-bottom: 5rem;
 }
+
+body {
+    overflow-x: hidden;
+}
 .c-wrap {
     display: grid;
     justify-content: center;
@@ -88,16 +92,17 @@
         }
     
         .carousel-wrapper {
+            overflow: hidden;
 
             .carousel-grid {
                 display: grid;
                 grid-template-columns: 1fr;
                 justify-content: center;
-                padding: .5rem;
-                width: auto;
+                /* padding: 2rem; */
+                width: 100%;
     
                 .c-top-layer {
-                    z-index: 100;
+                    z-index: 1;
                     opacity: 1;
                     position: relative;
                     grid-area: 1 / 1 / span 1 / span 1;
