small changes here and there. Mostly because of 'lighthouse' errors. 'Largest Contentful Paint element 18.850ms'

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@
 
 * {
     box-sizing: border-box;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    /* -webkit-tap-highlight-color: rgba(0, 0, 0, 0); */
 }
 
 body, section, div, header, footer, main, aside, nav, blockquote, p, span {
