--- a/css/sections/_app-features.css
+++ b/css/sections/_app-features.css
@@ -25,16 +25,15 @@
     
     .app-features-info {
         text-align: center;
-        margin-top: 1rem;
+        margin-bottom: 2rem;
         
         @media (min-width: 1400px) {
             text-align: left;
         }
     
-        #af-title {
-            /* font-size: 27.9px; */
+        h2 {
+        
             font-weight: 800;
-            /* margin-top: 4rem; */
             
             @media (min-width: 768px) {
                 font-size: 33.5px;
@@ -42,14 +41,7 @@
                 @media (min-width: 1400px) {
                     font-size: 40px;
                 }
-            }
-            
-        }
-        
-        #af-title-text {
-            font-size: 18px;
-            margin-bottom: 2rem;
-            color: var(--color-gray-600);    
+            } 
         }
     }
 }
