moved text from _app-features.css to _dark-mode.css, deleted some commented settings

--- a/css/other/_dark-mode.css
+++ b/css/other/_dark-mode.css
@@ -72,10 +72,12 @@
     /* App Features Section */
     #app-features-section {
 
-        p {
-            /* color: var(--color-white); */
-            /* opacity: 70%; */
+        /* p {
             color: var(--color-tex-wh-o70);
+        } */
+
+        .af-text-box .features .af-img-container::before {
+            background-color: rgba(243, 246, 255, 0.05); 
         }
     }    
         
