--- a/css/sections/_app-features.css
+++ b/css/sections/_app-features.css
@@ -11,7 +11,7 @@
         gap: 11rem;
     }
     
-    #af-phone {
+    #af-phone-image {
         display: none;
         
         @media (min-width: 1400px) {
@@ -62,7 +62,7 @@
         .features {
             display: grid;
             grid-template-columns: 60px 1fr;
-            grid-template-rows: auto;
+            /* grid-template-rows: auto; */
             justify-content: flex-start;
             width: 100%;
             gap: 1.3rem;
@@ -105,12 +105,10 @@
                 gap: 3rem;
                 
                 h3 {
-                    /* color: var(--color-gray-900); */
                     font-size: 20px;
                 }
                 
                 p {
-                    /* color: var(--color-gray-700); */
                     font-size: 16px;
                 }
             }
@@ -119,6 +117,6 @@
 }
 
 /* ChatGPT helped out with this. */
-body.dark-mode .app-features-grid .features .af-img-container::before {
-    background: rgba(243, 246, 255, 0.05); /* Same color with 5% opacity for dark mode */
-}
+/* body.dark-mode .af-text-box .features .af-img-container::before {
+    background: rgba(243, 246, 255, 0.05); 
+} */
