Updated the javascript with the help of ChatGPT, and I'm thinking, maybe I should just scrap this whole section, and make a bootstrap version instead!

--- a/css/other/_dark-mode.css
+++ b/css/other/_dark-mode.css
@@ -4,6 +4,11 @@
     background-color: var(--color-gray-900);
     color: var(--color-white);
 
+    p {
+        color: var(--color-tex-wh-o70);
+    }
+
+
     /* Navbar */
 
     header {
@@ -84,9 +89,8 @@
     /* Carousel Section */
     #carousel-section {
 
-        p {
+        /* p {
             color: var(--color-tex-wh-o70);
-            font-size: 16px;
-        }
+        } */
     }
 }
