--- a/css/sections/_carousel.css
+++ b/css/sections/_carousel.css
@@ -5,11 +5,12 @@
     padding-bottom: 5rem;
 }
 
-@media (max-width: 767px) {   
-    body {
-        overflow-x: hidden;
-    }
+body {
+    overflow-x: hidden;
 }
+@media (max-width: 767px) {   
+}
+
 .c-wrap {
     display: grid;
     justify-content: center;
@@ -38,20 +39,13 @@
             display: grid;
             grid-template-columns: 1fr;
             justify-content: center;
-            /* padding: 2rem; */
-            width: 100%;
+            max-width: 100%;
             
             .c-top-layer {
                 z-index: 1;
                 opacity: 1;
                 position: relative;
                 grid-area: 1 / 1 / span 1 / span 1;
-                
-                @media (min-width: 768px) {
-                    
-                    grid-area: 1 / 1 / span 1 / span 3;
-                        
-                }
             }
             
             #c-slide-layer {
@@ -62,7 +56,7 @@
                 position: relative;
                 grid-area: 1 / 1 / span 1 / span 1;
                 transition: transform 0.5s ease-in-out; /* For smooth sliding */
-
+                
             }
             
             .c-layers {
@@ -75,52 +69,71 @@
                 }
             }
             
-            
             .c-bottom-layer {
                 z-index: 0;
                 position: relative;
                 grid-area: 1 / 1 / span 1 / span 1;
-                
-                @media (min-width: 768px) {
-                    
-                    grid-area: 1 / 1 / span 1 / span 3;
-                    
-                }
             }
-            
-            
         }
     }
     
-
     @media (max-width: 767px) {
         .mobile-carousel { display: block; 
-            
+            height: 100vh;
+
             .carousel-wrapper {
                 overflow: hidden;
+                
             }
         }
         
     }
     @media (min-width: 768px) and (max-width: 1399px) {
         .tablet-carousel { display: block; 
-        
+            
             .carousel-grid {
-                /* grid-template-columns: repeat(3, 1fr); */
-                gap: -10rem;
+                grid-template-columns: repeat(3, 1fr);
+                
+                .c-top-layer {
+                    grid-area: 1 / 2;
+                }
+                
+                
+                .c-bottom-layer {
+                    grid-area: 1 / 2;
+                }
+                
+                #c-slide-layer {
+                    grid-area: 1 / 2;
+                }
+                .c-layers {
+                    
+                    
 
+                }
             }
         }
-
-        
     }
     
     @media (min-width: 1400px) {
         .desktop-carousel { display: block; 
-        
-        }
-    }
-
+            
+            .carousel-grid {
+                grid-template-columns: repeat(3, 1fr);
+                max-width: 100%;
+                
+                .c-top-layer {
+                    grid-area: 1 / 2;
+                }
+                
+                #c-slide-layer {
+                    grid-area: 1 / 2;
+                }
     
+                .c-bottom-layer {
+                    grid-area: 1 / 2;
+                }
+            }
+        }
+    }    
 }
-
